samples/_failures_safe/1761598443_e0b878_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55145000.c: In function ‘main’:
./samples/SAFE/__tmp_55145000.c:176:9: error: expected declaration or statement at end of input
  176 |         if (k >= token_count) break;
      |         ^~
./samples/SAFE/__tmp_55145000.c:176:9: error: expected declaration or statement at end of input
